# ITZY-MAYO-API

./: .gitignore  pyproject.toml
src/: main.py
src/api/v1/endpoints/: locations.py  schedules.py
src/core/: config.py
src/crud/: crud_fcm_token.py  crud_notification_history.py  crud_schedule.py  location.py
src/models/: fcm_token.py  location.py  notification_history.py  schedule.py
src/services/: notification_service.py
