[project]
name = "itzy-mayo-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.12",
    "pydantic>=2.11.5",
    "uvicorn[standard]>=0.34.3",
    "firebase-admin>=6.0.0",
    "geopy>=2.0.0",
    "pydantic-settings>=2.9.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
